          shows how to run screen in a scope unit underneath user@.service.
          The same command works for tmux.

          After the user logs out of all sessions, user@.service will be
          terminated too, by default, unless the user has "lingering" enabled.
          To effectively allow users to run long-term tasks even if they are
          logged out, lingering must be enabled for them. See loginctl(1)
          for details.

          Previous defaults can be restored at compile time by the
          --without-kill-user-processes option.

        * The unified cgroup hierarchy added in Linux 4.5 is now supported.
          Use systemd.unified_cgroup_hierarchy=1 on the kernel command line
          to enable.
          WARNING: it is not possible to use previous systemd versions with
          systemd.unified_cgroup_hierarchy=1 and the new kernel. Therefore it
          is necessary to also update systemd in the initramfs if using the
          unified hierarchy. Updated selinux policy is also required.

        * LLDP support has been extended, and both passive (receive-only)
          and active (sender) modes are supported. Passive mode
          ("routers-only") is enabled by default in systemd-networkd.
          Active LLDP mode is enabled by default for containers on the
          internal network.
          "networkctl lldp" can be used to list information gathered.

        * Headers for LLDP support (sd-lldp.h) are now public.

        * The Unique Identifier sent in DHCP requests can be configured.

        * Testing tool /usr/lib/systemd/systemd-activate is renamed to
          systemd-socket-activate and installed into /usr/bin. It is now fully
          supported.

        * systemd-journald now uses separate threads to flush changes to
          disk when closing journal files.

        * systemd-ask-password skips printing of the password to stdout
          with --no-output which can be useful in scripts.
